@@ -1,3 +1,7 @@
+2016-01-08  Stanislas Rolland  <typo3(arobas)sjbr.ca>
+
+	* Adjustments to the layout of the Statistics module
+
 2016-01-07  Stanislas Rolland  <typo3(arobas)sjbr.ca>
 
 	* Replace extension icons
